quick and dirty fix for wrapping lines

--- a/conferenceX/static/css/index.css
+++ b/conferenceX/static/css/index.css
@@ -43,6 +43,14 @@ body {
     display: none;
 }
 
+.nowrap{
+    white-space: nowrap;
+}
+
+.bold-title {
+    font-weight: bold;
+}
+
 @media only screen and (min-width: 601px) {
     .featherlight-content {
         width: 42.79%;
